sumo/tests/jtrrouter/errors/network/edge/root__edge#function__ungiven1/errors.jtrrouter
Error: Missing type in edge '1'.
Quitting (on error).
